Country aligned corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,7 @@ body.dark-mode .pais-header::after {
         margin: 0 80px;
         justify-content: center;
         flex-direction: column;
-        padding: 20px 0;
+        padding: 10px 5px;
     }
     
     .pais-container h2 {
